--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -10,6 +10,33 @@
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  height: 7px;
+  width: 7px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background-color: var(--color-background);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: var(--color-text);
+}
+
+.noScrollBar::-webkit-scrollbar {
+  display: none;
+}
+
+.noScrollBar::-webkit-scrollbar-track {
+  display: none;
+}
+
+.noScrollBar::-webkit-scrollbar-thumb {
+  display: none;
+}
+
 html[data-theme="dark"] {
   --color-shadow: #6e6e6e;
   --color-background: #010101;
